proc-macros/tests/ui/incorrect/rpc/rpc_empty_bounds.stderr
error[E0277]: the trait bound `<Conf as Config>::Hash: DeserializeOwned` is not satisfied
 --> tests/ui/incorrect/rpc/rpc_empty_bounds.rs:9:1
  |
9 | #[rpc(server, client, namespace = "foo", client_bounds(), server_bounds())]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `for<'de> Deserialize<'de>` is not implemented for `<Conf as Config>::Hash`
  |
  = note: required for `<Conf as Config>::Hash` to implement `DeserializeOwned`
note: required by a bound in `request`
 --> $WORKSPACE/core/src/client/mod.rs
  |
  |     fn request<R, Params>(&self, method: &str, params: Params) -> impl Future<Output = Result<R, Error>> + Send
  |        ------- required by a bound in this associated function
  |     where
  |         R: DeserializeOwned,
  |            ^^^^^^^^^^^^^^^^ required by this bound in `ClientT::request`
  = note: this error originates in the attribute macro `rpc` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `<Conf as Config>::Hash: Serialize` is not satisfied
 --> tests/ui/incorrect/rpc/rpc_empty_bounds.rs:9:1
  |
9 | #[rpc(server, client, namespace = "foo", client_bounds(), server_bounds())]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `<Conf as Config>::Hash`
  |
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `<Conf as Config>::Hash` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = note: required for `Result<<Conf as Config>::Hash, ErrorObject<'_>>` to implement `IntoResponse`
  = note: this error originates in the attribute macro `rpc` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `<Conf as Config>::Hash: Clone` is not satisfied
 --> tests/ui/incorrect/rpc/rpc_empty_bounds.rs:9:1
  |
9 | #[rpc(server, client, namespace = "foo", client_bounds(), server_bounds())]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `<Conf as Config>::Hash`
  |
  = note: required for `Result<<Conf as Config>::Hash, ErrorObject<'_>>` to implement `IntoResponse`
  = note: this error originates in the attribute macro `rpc` (in Nightly builds, run with -Z macro-backtrace for more info)
